<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context=".form.controller.FormActivity">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/form_instructions" />

		<EditText
				android:id="@+id/uid"
				style="@style/FormEditText"
				android:hint="@string/uid"
				android:inputType="text" />

		<EditText
				android:id="@+id/apiKey"
				style="@style/FormEditText"
				android:hint="@string/apiKey"
				android:inputType="text" />

		<EditText
				android:id="@+id/appid"
				style="@style/FormEditText"
				android:hint="@string/appid"
				android:inputType="text" />

		<EditText
				android:id="@+id/pub0"
				style="@style/FormEditText"
				android:hint="@string/pub0"
				android:inputType="text" />

		<Button
				android:id="@+id/viewOffers"
				style="@style/FormButton"
				android:text="@string/viewOffers" />
	</LinearLayout>
</ScrollView>